--- a/public/css/create.css
+++ b/public/css/create.css
@@ -12,6 +12,7 @@
    font-size: 13px;
    position: relative;
    top: 1px;
+   white-space: nowrap;
 }
 
 #createEvent input, #requestIn input {
@@ -137,8 +138,7 @@
    margin-top: 5px;
 }
 
-.item-name {
-}
+.item-name {}
 
 .pac-item {
    font-family: 'Karla';
@@ -155,6 +155,7 @@
 
 .pac-item:first-of-type {
    border-top: none;
+   background: #fcfcfc;
 }
 
 .agerange, .mixity {
@@ -197,7 +198,7 @@ font-size: 32px;color: #5B5B5B;font-family: 'Roboto';font-weight: 300;padding: 0
 display: inline-block;color: #65605B;font-weight: 100;transition: all ease-out .5s;border-radius: 5px;}
 .hp-layer {
 
-background: #FEFEFE;height: 100%;padding-top: 22px;background: radial-gradient(#fff,#FCFEFE);}
+background: #FEFEFE;height: 100%;padding-top: 22px;border-radius: 5px;}
 
 .hp-hourwrap,
 .hp-minwrap {
