--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -270,33 +270,12 @@
     
     <section id="eventsWrap" class="none centered">
       
-      <div class="row row-events text-center">
-        <h2 data-lid="e_title" > Tous les Meefore </h2>
-        <h5 data-lid="e_subtitle" class="row-title-sub"> L'abus de soirées est excellent pour la santé.</h5>
-      </div>
-
       <div class="row row-events row-events-filters etiquette">
         <div class="row-events-filters-group">
-          <div class="event-filter-label">Vous êtes : </div>
-          <div class="event-filter-options filter-mixity">
-            <!-- Dynamically loaded -->
-          </div>
+          <div class="event-filter-label">Changer d'endroit : </div>
+          <input id="moveAround" type="text" placeholder="Paris, Londres..." >
         </div>
         <div class="row-events-filters-divider"></div>
-        <div class="row-events-filters-group">
-          <div class="event-filter-label">Vous avez : </div>
-          <div class="event-filter-options filter-agerange">
-            <!-- Dynamically loaded -->
-          </div>
-        </div>
-        <div class="row-events-filters-divider"></div>
-        <div class="row-events-filters-group">
-          <div class="event-filter-label">C'est pour sortir : </div>
-          <div class="event-filter-options">
-            <div class="event-filter slow-down-3">Aujourd'hui</div>
-            <div class="event-filter slow-down-3">Plus tard</div>
-          </div>
-        </div>
         <button data-lid="e_create_button" class="theme-btn btn-create-event right">Proposer un meefore</button>
       </div>
 
@@ -462,6 +441,7 @@
   <script src="js/src/profile/lj-profile.js"></script>
   <script src="js/src/pusher/lj-pusher.js"></script>
   <script src="js/src/errors/lj-errors.js"></script>
+  <script src="js/src/languages/lj-country.js"></script>
   <script src="js/src/languages/lj-languages.js"></script>
   <script src="js/src/init/lj-init.js"></script>
   <script src="js/src/lj-junk.js"></script>
