--- a/public/css/search.css
+++ b/public/css/search.css
@@ -11,7 +11,7 @@
 
 .event-preview,
 .party-preview {
-   background: rgba(255, 255, 255, 0.81);
+   background: white;
    border-bottom: 1px solid #E4E4E4;
    box-shadow: 0 0 1px #e4e4e4;
    padding: 15px 15px;
