--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,9 +117,7 @@ font-size: 14px;text-align: center;color: #ee;}
 }
 
 .label {
-/*Hello git*/
-   font-size: 14px;
-   font-family: 'Lato';
+/*Hello git*/font-size: 13px;font-family: 'Lato';
    font-weight: bolder;margin-right: 15px;
    display: inline-block;
    color: #555;
@@ -129,7 +127,6 @@ font-size: 14px;text-align: center;color: #ee;}
 	ease-out .3s;}
 
 .label-lg {
-   width: 113px;
 }
 
 .label-md {
@@ -1458,7 +1455,7 @@ input[type="radio"] + span {
    margin-left: 0px;
    transition: all .7s;
    position: relative;
-   top: -5px;
+   top: -3px;
 }
 
 .action:hover {
@@ -1724,7 +1721,7 @@ p {
 	top: -8px;
 	padding: 5px 10px;
 	box-shadow: 1px 1px 1px #871111;
-	transform: rotate(-10deg);
+	transform: rotate(0deg);
 	border-radius: 5px 0 5px 0;
 }
 
