--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -85,7 +85,7 @@
   <!-- Header start -->
   <header class="lg-header none">
     <div id="headerContent">
-    <div class="preview-type beta">beta</div>
+    <div class="preview-type beta">bêta</div>
       <img id="logo" src="/img/logomeefore.png" width="48"></img>
       <ul id="menuWrap" class="">
         <li id="profile" class="menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span class="underlay"></span></li>
@@ -270,20 +270,22 @@
     
     <section id="eventsWrap" class="none centered">
       
-      <div class="row row-events row-events-filters etiquette">
+      <div class="row row-events row-events-filters">
         <div class="row-events-filters-group">
           <div class="event-filter-label">Changer d'endroit : </div>
           <input id="moveAround" type="text" placeholder="Paris, Londres..." >
         </div>
         <div class="row-events-filters-divider"></div>
-        <button data-lid="e_create_button" class="theme-btn btn-create-event right">Proposer un meefore</button>
+        <div class="row-events-filters-group filters-create-meefore">
+          <button data-lid="e_create_button" class="theme-btn btn-create-event right">Proposer un meefore</button>
+        </div>
       </div>
 
       <div class="row row-events row-main">
-        <div class="row-events-preview">
+        <div class="row-preview row-events-preview">
               <!-- Dynamically loaded -->
         </div>
-        <div class="row-party-preview">
+        <div class="row-preview row-party-preview">
               <!-- Dynamically loaded -->
         </div>
         <div class="row-events-map">
