--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -85,7 +85,7 @@
   <!-- Header start -->
   <header class="lg-header none">
     <div id="headerContent">
-    <div class="preview-type beta">beta</div>
+    <div class="preview-type beta">bêta</div>
       <img id="logo" src="/img/logomeefore.png" width="48"></img>
       <ul id="menuWrap" class="">
         <li id="profile" class="menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span class="underlay"></span></li>
@@ -176,8 +176,8 @@
           <!-- Dynamically loaded -->
         </div>
         <div class="row-buttons">
-          <button data-lid="p_button_validate" class="theme-btn btn-cancel right">Annuler</button>
-          <button data-lid="p_button_cancel" class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
         </div>
       </div>
  
@@ -226,8 +226,8 @@
         </div>
 
         <div class="row-buttons">
-          <button data-lid="p_button_validate" class="theme-btn btn-cancel right">Annuler</button>
-          <button data-lid="p_button_cancel" class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
         </div>
 
       </div>
@@ -270,20 +270,22 @@
     
     <section id="eventsWrap" class="none centered">
       
-      <div class="row row-events row-events-filters etiquette">
+      <div class="row row-events row-events-filters">
         <div class="row-events-filters-group">
           <div class="event-filter-label">Changer d'endroit : </div>
           <input id="moveAround" type="text" placeholder="Paris, Londres..." >
         </div>
         <div class="row-events-filters-divider"></div>
-        <button data-lid="e_create_button" class="theme-btn btn-create-event right">Proposer un meefore</button>
+        <div class="row-events-filters-group filters-create-meefore">
+          <button data-lid="e_create_button" class="theme-btn btn-create-event right">Proposer un meefore</button>
+        </div>
       </div>
 
       <div class="row row-events row-main">
-        <div class="row-events-preview">
+        <div class="row-preview row-events-preview">
               <!-- Dynamically loaded -->
         </div>
-        <div class="row-party-preview">
+        <div class="row-preview row-party-preview">
               <!-- Dynamically loaded -->
         </div>
         <div class="row-events-map">
@@ -399,7 +401,7 @@
 
   </div>
   
-   <script id="app_ids">
+  <script id="app_ids"> 
     window.facebook_app_id = "1638108873141834";
     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
