--- a/public/css/events.css
+++ b/public/css/events.css
@@ -218,7 +218,7 @@ padding-left: 3px;display: inline-block;font-size: 13px;}
   position: relative;
   text-align: left;
   padding: 15px 50px 11px 50px;
-  background: rgba(255, 255, 255, 0.65);
+  background: rgba(255, 255, 255, 0.55);
   z-index: 1;
   overflow: visible!important;
   border-bottom: 1px solid #eee;
@@ -317,17 +317,17 @@ transform: rotate(30deg);
 }
 
 .btn-request-in:hover, .btn-create-event:hover {
-  opacity: .8; 
-  background: #E94F6A;
+  opacity: .8;
+  background: #FC738A;
 }
 .btn-preview {
   text-transform: uppercase;
   padding: 11px 15px;
   border-radius: 0;
-  background: #F8F8F8;
+  background: #E94F6A;
   border: none;
   font-size: 10px;
-  color: #080808;
+  color: #FFFFFF;
   display: inline-block;
   position: absolute;
   right: 0;
@@ -366,7 +366,7 @@ cursor: pointer;margin: 10px 0 0 22px;
 background: white;
 color: #530606;
 box-shadow: 2px 0px 3px -1px #ccc;
-transform: skewX(20deg);width: 130px;height: 37px;
+transform: skewX(20deg);width: 120px;height: 37px;
 white-space: nowrap;
 border-radius: 5px 5px 0 0;top: 0px;}
 
@@ -417,6 +417,7 @@ border-radius: 5px 5px 0 0;top: 0px;}
   z-index: 10;
   position: relative;
   top: -3px;
+  left: -12px;
 }
 
 .icon-tabview {
@@ -651,27 +652,23 @@ font-size: 19px;color: #BEBEBE;position: absolute;top: -0.5px;display: inline-bl
 
 color: #ccc;text-transform: uppercase;text-align: right;font-size: 12px;padding: 7px 8px 0 0;transition: all ease-out .15s;}
 .event-accepted-user {
-
-margin: 3px 0;font-family: 'Karla';padding: 1px;background: #FCFCFC;border-bottom: 1px solid #eee;transition: all ease-out .3s;}
+margin: 3px 0;
+font-family: 'Karla';
+padding: 1px;
+background: #FAFAFA;
+border-bottom: 1px solid #eee;
+transition: all ease-out .3s;
+}
 .event-accepted-user-name {
-
-letter-spacing: -.5px;
-
-margin-left: 8px;
-
-padding: 8px 10px;
-
-background: #F7F7F7;
-
-border-radius: 3px;
-
-font-size: 14px;
-
-/* font-family: 'Lato'; */
-
-cursor: default;
-
-border-bottom: 1px solid #eee;
+letter-spacing: -.5px;
+margin-left: 8px;
+padding: 8px 10px;
+background: #EFEFEF;
+border-radius: 3px;
+font-size: 14px;
+/* font-family: 'Lato'; */
+cursor: default;
+border-bottom: 1px solid #eee;
 }
 .event-accepted-user-picture {
 
@@ -842,26 +839,16 @@ padding: 8px 0px 0 20px;
 }
 
 .event-accepted-chat-typing input {
-
-position: relative;
-
-z-index: 2;
-
-background: #FCFCFC;
-
-padding: 6px 0 4px 10px;
-
-border-bottom: 1px solid #eee;
-
-width: 89%;
-
-color: #525252;
-
-font-family: 'Karla';
-
-font-size: 13px;
-
-transition: all ease-out .3s;
+position: relative;
+z-index: 2;
+background: #F5F5F5;
+padding: 6px 0 4px 10px;
+border-bottom: 1px solid #eee;
+width: 89%;
+color: #525252;
+font-family: 'Karla';
+font-size: 13px;
+transition: all ease-out .3s;
 }
 .event-accepted-chat-typing button {
 
