--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -407,8 +407,19 @@
   </script>
 
   <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
-  <script src="dist/lib.js"></script>
+  <script src="js/lib/lodash.js"></script>
+  <script src="js/lib/mousetrap.js"></script>
+  <script src="js/lib/jquery.js"></script>
   <script src="js/lib/pikaday.js"></script>
+  <script src="js/lib/joyride.js"></script>
+  <script src="js/lib/jscrollpane.js"></script>
+  <script src="js/lib/jquery.cloudinary.js"></script>
+  <script src="js/lib/jquery.typeahead.js"></script>
+  <script src="js/lib/typed.js"></script>
+  <script src="js/lib/waitForImages.min.js"></script>
+  <script src="js/lib/velocity.min.js"></script>
+  <script src="js/lib/velocityui.min.js"></script>
+  <script src="js/lib/moment.min.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
   <script src="js/lib/momentwithlocale.min.js"></script>
   <script src="js/lib/rangeslider.js"></script>
