--- a/public/css/events.css
+++ b/public/css/events.css
@@ -281,28 +281,17 @@ display: inline-block;}
 }
 
 .backtomap {
-
-position: absolute;
-
-top: 0;
-
-left: 50%;
-
-transform: translate(0,-50%);
-
-background: #E94F6A;
-
-color: white;
-
-padding: 5px 10px;
-
-font-size: 11px;
-
-font-family: 'Karla';
-
-cursor: pointer;
-
-border-radius: 3px;
+position: absolute;
+top: 0;
+left: 50%;
+transform: translate(0,-50%);
+background: #E94F6A;
+color: white;-:10px;
+font-family: 'Karla';
+cursor: pointer;
+border-radius: 3px;
+width: 50px;
+height: 4px;
 }
 .backtomap .icon {
 transition: all ease-out .3s;
@@ -844,7 +833,7 @@ padding: 8px 0px 0 20px;
 background: #F5F5F5;
 padding: 6px 0 4px 10px;
 border-bottom: 1px solid #eee;
-width: 89%;
+width: 86%;
 color: #525252;
 font-family: 'Karla';
 font-size: 13px;
