--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -167,7 +167,7 @@
       <div class="row row-profile row-pictures">
         <div class="row-title">
           <div data-lid="p_pictures_title" class="row-title-text">Tes 5 photos</div>
-          <i class="icon icon-edit icon-feather right"></i>
+          <i class="icon icon-edit icon-pencil right"></i>
         </div>
         <div class="row-subtitle">
           <div data-lid="p_pictures_subtitle" class="row-subtitle-text etiquette">Plusieurs photos valent mieux qu'un long discours! Montre toi sous ton plus beau jour.</div>
@@ -176,8 +176,8 @@
           <!-- Dynamically loaded -->
         </div>
         <div class="row-buttons">
-          <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
-          <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-cancel">Annuler</button>
         </div>
       </div>
  
@@ -186,7 +186,7 @@
 
         <div class="row-title">
           <div data-lid="p_info_title" class="row-title-text">Informations</div>
-          <i class="icon icon-edit icon-feather right"></i>
+          <i class="icon icon-edit icon-pencil right"></i>
         </div>
 
         <div class="row-subtitle">
@@ -226,8 +226,8 @@
         </div>
 
         <div class="row-buttons">
-          <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
-          <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-cancel">Annuler</button>
         </div>
 
       </div>
@@ -236,7 +236,6 @@
       <div class="row row-profile row-friends">
         <div class="row-title">
           <div data-lid="p_friends_title" class="row-title-text">Tout le monde est sur meefore</div>
-          <i class="icon icon-edit icon-feather right"></i>
         </div>
         <div class="row-subtitle">
           <div data-lid="p_friends_subtitle" class="row-subtitle-text etiquette">Tes amis Facebook sont tous sur meefore. Il en manque ? Invites-les et gagne des points!</div>
@@ -252,15 +251,15 @@
       <div class="row row-profile row-okc none">
         <div class="row-title">
           <div class="row-title-text">Tes questions perso</div>
-          <i class="icon icon-edit icon-feather right"></i>
+          <i class="icon icon-edit icon-pencil right"></i>
         </div>
         <div class="row-subtitle">
           <div class="row-subtitle-text etiquette">On vous évite de parler des heures. Répondez franchement aux 10 questions ci-dessous, c'est pour vous.</div>
         </div>
 
         <div class="row-buttons">
-          <button class="theme-btn btn-cancel right">Annuler</button>
-          <button class="theme-btn btn-validate right">Valider</button>
+          <button class="theme-btn btn-validate">Valider</button>
+          <button class="theme-btn btn-cancel">Annuler</button>
         </div>
       </div>
 
@@ -272,6 +271,7 @@
       
       <div class="row row-events row-events-filters">
         <div class="row-events-filters-group">
+          <i class="icon icon-filters-group icon-location"></i>
           <div class="event-filter-label">Changer d'endroit : </div>
           <input id="moveAround" type="text" placeholder="Paris, Londres..." >
         </div>
@@ -331,7 +331,7 @@
 
         <div class="row-title">
           <div data-lid="s_app_title" class="row-title-text">Application</div>
-          <i class="icon icon-edit icon-feather right"></i>
+          <i class="icon icon-edit icon-pencil right"></i>
         </div>
 
         <div class="row-subtitle">
@@ -351,8 +351,8 @@
         </div>
 
         <div class="row-buttons">
-          <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
-          <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
+          <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
+          <button data-lid="p_button_cancel" class="theme-btn btn-cancel">Annuler</button>
         </div>
 
       </div>  
@@ -361,7 +361,7 @@
 
         <div class="row-title">
           <div data-lid="s_alerts_title" class="row-title-text">Alertes et notifications</div>
-          <i class="icon icon-edit icon-feather right"></i>
+          <i class="icon icon-edit icon-pencil right"></i>
         </div>
 
         <div class="row-subtitle">
@@ -389,8 +389,8 @@
           </div>
 
           <div class="row-buttons">
-            <button data-lid="p_button_cancel" class="theme-btn btn-cancel right">Annuler</button>
-            <button data-lid="p_button_validate" class="theme-btn btn-validate right">Valider</button>
+            <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
+            <button data-lid="p_button_cancel" class="theme-btn btn-cancel">Annuler</button>
           </div>
 
         </div>
