--- a/public/css/search.css
+++ b/public/css/search.css
@@ -17,6 +17,10 @@
    border-radius: 2px 2px 0 0;
    /* display: inline-block; */
 }
+.event-preview {
+    display: inline-block;
+    float: left;
+}
 .party-preview {
 height: 69px;/* width: 400px; */}
 
